# cc-menubar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
demo/: capture.sh
src/cc_menubar/: bash_utils.py  ccusage_helper.sh  classifier.py  cli.py  config.py  constants.py  defaults.toml  labels.py  render.py
src/cc_menubar/collectors/: blocks.py  cache.py  jsonl.py  quota.py
tests/: test_bash_utils.py  test_cli.py  test_config.py  test_jsonl.py  test_labels.py  test_quota.py  test_render.py
