[project]
name = "cc-menubar"
version = "2.0.0"
description = "Pace your quota — proactive forecasting for Claude Code Max, not retroactive tracking"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]
authors = [{name = "Calvin"}]
keywords = ["claude-code", "macos", "menubar", "swiftbar", "quota", "forecasting", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/calvindotsg/cc-menubar"
Repository = "https://github.com/calvindotsg/cc-menubar"
Issues = "https://github.com/calvindotsg/cc-menubar/issues"
Changelog = "https://github.com/calvindotsg/cc-menubar/blob/main/CHANGELOG.md"

[project.scripts]
cc-menubar = "cc_menubar.cli:app"

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_menubar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
